# dirt

./: .editorconfig  .gitmodules  CMakeLists.txt
src/: main.cpp
